lab4 fix scania